--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
