--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-magnifier": "^3.0.4",
