--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-magnifier": "^3.0.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
