--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "debounce": "^1.2.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
@@ -25,6 +26,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
